--- a/my_robot/package.xml
+++ b/my_robot/package.xml
@@ -2,18 +2,18 @@
 <package>
   <name>my_robot</name>
   <version>0.0.0</version>
-  <description>The my_robot package</description>
+  <description>The "my_robot" package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="robond@todo.todo">robond</maintainer>
+  <maintainer email="contact.liuwenjing@gmail.com">Wenjing Liu</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>MIT</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
