--- a/ball_chaser/CMakeLists.txt
+++ b/ball_chaser/CMakeLists.txt
@@ -57,7 +57,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 add_service_files(
   FILES
-  DiveToTarget.srv
+  DriveToTarget.srv
 )
 
 ## Generate actions in the 'action' folder
