--- a/ball_chaser/CMakeLists.txt
+++ b/ball_chaser/CMakeLists.txt
@@ -135,6 +135,7 @@ include_directories(
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/ball_chaser_node.cpp)
 add_executable(drive_bot src/drive_bot.cpp)
+add_executable(process_image src/process_image.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -142,17 +143,21 @@ add_executable(drive_bot src/drive_bot.cpp)
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
 # set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 set_target_properties(drive_bot PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(process_image PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(drive_bot ${drive_bot_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(process_image ${drive_bot_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
 #   ${catkin_LIBRARIES}
 # )
 target_link_libraries(drive_bot ${catkin_LIBRARIES})
+target_link_libraries(process_image ${catkin_LIBRARIES})
+
 
 #############
 ## Install ##
