--- a/ball_chaser/CMakeLists.txt
+++ b/ball_chaser/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   roscpp
   std_msgs
+  controller_manager
 )
 
 ## System dependencies are found with CMake's conventions
@@ -142,14 +143,14 @@ add_executable(process_image src/process_image.cpp)
 ## target back to the shorter version for ease of user use
 ## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
 # set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
-set_target_properties(drive_bot PROPERTIES OUTPUT_NAME node PREFIX "")
-set_target_properties(process_image PROPERTIES OUTPUT_NAME node PREFIX "")
+set_target_properties(drive_bot PROPERTIES OUTPUT_NAME drive_bot PREFIX "")
+set_target_properties(process_image PROPERTIES OUTPUT_NAME process_image PREFIX "")
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 add_dependencies(drive_bot ${drive_bot_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(process_image ${drive_bot_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(process_image ${process_image_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node
